fixed style spacing on sidebar

--- a/app/assets/stylesheets/partials/_main.sass
+++ b/app/assets/stylesheets/partials/_main.sass
@@ -78,9 +78,9 @@ footer
     #sidebar
       overflow: auto
       margin: 0
-      width: 30%
+      width: 35%
       float: left
-      margin-left: 4%
+      margin-left: 2%
       section
         width: 90%
 @media all and (max-width: 945px) 
@@ -103,5 +103,3 @@ footer
           float: none
           margin: 0 auto
           margin-bottom: 14px
-        
-        
